[package]
name = "entry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
example = { path = "../example" }
foliage = { path = "../foliage" }
log = "0.4.20"
console_log = { version = "1.0.0", features = ["color"] }
[lib]
name = "entry"
path = "src/lib.rs"
crate-type = ["cdylib"]