[package]
name = "foliage"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
foliage_proper = { path = "../foliage_proper" }
foliage_scenes = { path = "../foliage_scenes"}
foliage_macros = { path = "../foliage_macros"}
[features]
scenes = []
derive = []