[package]
name = "foliage"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.15.0" , features = ["derive"]}
winit = { version = "0.30.0" , features = ["android-game-activity"]}
wgpu = { version = "0.19.4" , features = ["metal", "webgl", "wgsl"]}
bevy_ecs = "0.13.2"