[package]
name = "foliage_proper"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.16.3", features = ["derive"] }
winit = { version = "0.30.5", features = ["android-game-activity"] }
wgpu = { version = "23.0.0", features = ["metal", "webgl", "wgsl"] }
bevy_ecs = "0.15.0"
serde = { version = "1.0.214", features = ["derive"] }
cfg-if = "1.0.0"
rmp-serde = "1.3.0"
image = "0.25.4"
bitflags = "2.6.0"
futures-channel = "0.3.31"
uuid = { version = "1.11.0", features = ["v4"] }
reqwest = "0.12.9"
fontdue = "0.9.2"
smallvec = "1.13.2"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
wasm-bindgen = "0.2.95"
web-time = "1.1.0"
[dependencies.web-sys]
package = "web-sys"
version = "0.3.72"
features = [
    "Blob",
    "BlobPropertyBag",
    "console",
    "Clipboard",
    "ClipboardItem",
    "CssStyleDeclaration",
    "HtmlElement",
    "Navigator",
    "Window",
    "Document"
]
[target.'cfg(not(target_family = "wasm"))'.dependencies]
pollster = "0.4.0"
copypasta = "0.10.1"
open = "5.3.0"
[target.'cfg(target_family = "wasm")'.dependencies]
tracing-subscriber-wasm = "0.1.0"
wasm-bindgen-futures = "0.4.42"
console_error_panic_hook = "0.1.7"
console = "0.15.8"
flate2 = "1.0.34"
