[package]
name = "foliage_scenes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
foliage_proper = { path = "../foliage_proper" }
foliage_macros = { path = "../foliage_macros"}
compact_str = "0.7.1"
tracing = "0.1.40"