[package]
name = "entry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
example = { path = "../example" }
foliage = { path = "../../foliage" }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-subscriber-wasm = "0.1.0"
console_error_panic_hook = "0.1.7"
[lib]
name = "entry"
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "worker"
path = "src/worker.rs"